# AboutLab

./: CompetitionParticipation.md  README.md  Tec-Direction.md
2021/智能车航天智慧物流祖/qingzhou_code_submit/image_publisher/: package.xml
2021/智能车航天智慧物流祖/qingzhou_code_submit/qingzhou_nav/config/: costmap_common.yaml  dwa_local_planner.yaml  imu_calib.yaml  laser_filter.yaml  teb_local_planner.yaml
2021/智能车航天智慧物流祖/qingzhou_code_submit/qingzhou_nav/config/cartographer/: localization.lua  slam.lua
2021/智能车航天智慧物流祖/qingzhou_code_submit/qingzhou_nav/launch/: cartographer.launch  qingzhou_bringup.launch  qingzhou_slam_nav.launch
2021/智能车航天智慧物流祖/qingzhou_code_submit/traffic_light_detector/src/: detector.cpp
2021/智能车航天智慧物流祖/qingzhou_code_submit/upper_machine/: CMakeLists.txt
2021/智能车航天智慧物流祖/qingzhou_code_submit/upper_machine/src/: coord_input.cpp  main.cpp  main_window.cpp  main_window.hpp  util.cpp  util.hpp
2021/智能车航天智慧物流祖/技术报告/: 智慧物流技术文档.docx
2021/智能车航天智慧物流组/qingzhou_code_submit/qingzhou_nav/config/: global_planner.yaml  imu_calib.yaml_old
2021/智能车航天智慧物流组/qingzhou_code_submit/qingzhou_nav/launch/: ydlidar.launch
2021/智能车航天智慧物流组/qingzhou_code_submit/traffic_light_detector/: package.xml
2021/智能车航天智慧物流组/qingzhou_code_submit/upper_machine/src/: QRosCallBackQueue.cpp  QRosCallBackQueue.h
中国大学生计算机设计大赛/2022/: 医疗机器人.md
智能车航天智慧物流组/2021/light_recognition/: CMakeLists.txt  detection.cpp
智能车航天智慧物流组/2021/qingzhou_code_submit/image_publisher/: CMakeLists.txt
智能车航天智慧物流组/2021/qingzhou_code_submit/image_publisher/src/: main.cpp
智能车航天智慧物流组/2021/qingzhou_code_submit/qingzhou_nav/config/: global_costmap.yaml
智能车航天智慧物流组/2021/qingzhou_code_submit/qingzhou_nav/launch/: camera.launch
智能车航天智慧物流组/2021/qingzhou_code_submit/qinzhou_odom/qingzhou_bringup/src/: qingzhou_bringup.cpp
智能车航天智慧物流组/2021/qingzhou_code_submit/traffic_light_detector/: CMakeLists.txt
智能车航天智慧物流组/2021/qingzhou_code_submit/traffic_light_detector/src/: detector.hpp  main.cpp
智能车航天智慧物流组/2021/qingzhou_code_submit/upper_machine/: package.xml
智能车航天智慧物流组/2021/qingzhou_code_submit/upper_machine/src/: Spoiler.hpp  coord_input.hpp
智能车航天智慧物流组/2021/技术报告/qingzhou_code_submit/qingzhou_nav/config/: local_costmap.yaml  move_base.yaml
智能车航天智慧物流组/2021/技术报告/qingzhou_code_submit/upper_machine/src/: Spoiler.cpp
